--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.3",
-    "angular-animate": "^1.5.3",
-    "angular-ui-bootstrap": "^1.3.3",
-    "angular-ui-router": "^0.2.18",
-    "bootstrap": "^3.3.6",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-connect": "^3.2.2",
     "gulp-htmlmin": "^3.0.0",
@@ -25,14 +24,11 @@
     "gulp-ngmin": "^0.3.0",
     "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
+    "gulp-strip-comments": "^2.4.5",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.22",
-    "jquery": "^2.2.3",
     "jshint": "^2.9.1",
-    "normalize-scss": "^4.0.3",
-    "normalize.css": "^4.0.0",
-    "support-for": "^1.0.5",
-    "velocity-animate": "^1.2.3"
+    "support-for": "^1.0.5"
   },
   "repository": {
     "type": "git",
@@ -42,5 +38,17 @@
     "url": "https://github.com/gfed53/ultimate-youtube-searcher/issues"
   },
   "homepage": "https://github.com/gfed53/ultimate-youtube-searcher#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.3",
+    "angular-ui-bootstrap": "^1.3.3",
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.2.3",
+    "moment": "^2.18.1",
+    "normalize-scss": "^4.0.3",
+    "normalize.css": "^4.0.0",
+    "velocity-animate": "^1.2.3"
+  }
 }
