--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "youtube-searcher-firebase",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -43,7 +42,9 @@
     "angular-animate": "^1.5.3",
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.2",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.6",
+    "express": "^4.15.3",
     "jquery": "^2.2.3",
     "moment": "^2.18.1",
     "normalize-scss": "^4.0.3",
