--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.22",
     "jshint": "^2.9.1",
+    "run-sequence": "^2.1.0",
     "support-for": "^1.0.5"
   },
   "repository": {
