--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "gulp build && node server"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Gregory Federico",
+  "license": "UNLICENSED",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
