--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "youtube-searcher-firebase",
   "version": "1.0.0",
+  "engines": {
+    "node": "6.11.1"
+  },
   "main": "server.js",
   "scripts": {
-    "start": "gulp build && node server"
+    "start": "gulp build && node server",
+    "build": "gulp build && node server"
   },
   "author": "Gregory Federico",
   "license": "UNLICENSED",
@@ -21,6 +25,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
+    "gulp-ng-annotate": "^2.1.0",
     "gulp-ngmin": "^0.3.0",
     "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
