--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "server.js",
   "scripts": {
     "start": "gulp build && node server",
+    "dev": "node server",
     "build": "gulp build && node server"
   },
   "author": "Gregory Federico",
